Adding some initial code. Much of this is from the kiji archetype.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
-*.class
+# Temporary files used by editors.
+*~
+*.swp
+.#*
+\#*
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Project files from IDEs.
+.classpath
+.project
+.settings
+prj.el
+.jde/
+TAGS
+.taglist
+nb-configuration.xml
+nbactions.xml
+.ensime
+.idea/
+*.iml
+
+# Build and run artifacts.
+target/
+build/
+logs/
+pids/
